um pacote de mudanças

--- a/inbattle/app/assets/stylesheets/custom.css.scss
+++ b/inbattle/app/assets/stylesheets/custom.css.scss
@@ -119,7 +119,22 @@ aside {
     }
   }
 }
-
+.corpoalistamento b,h1,h2{
+  color: #0066cc;
+}
+.corpoalistamento p{
+  font-size:15px;
+}
+.corpoalistamento h2{
+  font-size:20px;
+}
+.corpoalistamento{
+  padding-bottom:10%;
+}
+.num_premiacao{
+  color:#0066cc;
+  font-size:25px;
+}
 .gravatar {
   float: left;
   margin-right: 10px;
