--- a/inbattle/app/views/contacts/_form.html.erb
+++ b/inbattle/app/views/contacts/_form.html.erb
@@ -1,33 +1,46 @@
-<%= form_for(@contact) do |f| %>
-  <% if @contact.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
-
-      <ul>
-      <% @contact.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="container">
+  <div class="col-lg-6 col-md-6 pag-contato">
+		<h1>Dúvidas, elogios, sugestões? Entre em contato conosco!</h1>
+		
+    <%= form_for(@contact) do |f| %>
+      <% if @contact.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(@contact.errors.count, "error") %> prohibited this contact from being saved:</h2>
+    
+          <ul>
+          <% @contact.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :name %><br>
-    <%= f.text_field :name %>
+    
+      <div class="field">
+        <%= f.label :nome %><br>
+        <%= f.text_field :name %>
+      </div>
+      <div class="field">
+        <%= f.label :email %><br>
+        <%= f.text_field :email %>
+      </div>
+      <div class="field">
+        <%= f.label :assunto %><br>
+        <%= f.text_field :subject %>
+      </div>
+      <div class="field">
+        <%= f.label :mensagem %><br>
+        <%= f.text_area :message %>
+      </div>
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+    <% end %>   
   </div>
-  <div class="field">
-    <%= f.label :email %><br>
-    <%= f.text_field :email %>
+  <div class="col-lg-6 col-md-6">
+	  <h1><strong>A IN Junior</strong></h1>
+	
+	  <p>A IN Junior é a empresa júnior de computação da UFF. Atuamos desde novembro de 2014 em consultoria em TI e criação de sites e sistemas web.</p>
+	  <p>Nossa missão é desenvolver pessoas e entregar soluções inteligentes em TI. Acreditamos que através do nosso trabalho, dedicação e a integração com o MEJ e a Universidade podemos entregar uma experiência enriquecedora para nossos membrose retribuir a sociedade com nossos serviços.</p>
   </div>
-  <div class="field">
-    <%= f.label :subject %><br>
-    <%= f.text_field :subject %>
-  </div>
-  <div class="field">
-    <%= f.label :message %><br>
-    <%= f.text_area :message %>
-  </div>
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
+	
+</div>
