--- a/inbattle/app/views/layouts/_header.html.erb
+++ b/inbattle/app/views/layouts/_header.html.erb
@@ -12,21 +12,26 @@
       
       <div class="collapse navbar-collapse texto-header" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right links">
-      <% if logged_in? %>
-  		    <li><%= link_to "Incluir usuários", '../../users/new' %></li>
-          <li><%= link_to "Inicializar Temas", '../../temas/new' %></li>
-          <li><%= link_to "Incluir Candidatos", '../../candidatos/new' %></li>
-		      <li><%= link_to "Trocar Senha", edit_user_path(current_user) %></li>
-          <li><%= link_to "Log out", logout_path, method: "delete" %></li>
-    		  <li><%= link_to "Todos admin", users_path %></li>
-    		  <li><%= link_to "Todos candidatos", candidatos_path %></li>
-    		  <li><%= link_to "Todos os temas", temas_path %></li>
-      <% else %>
           <li><%= link_to "início",    root_path %></li>
           <li><%= link_to "alistamento",   alistamento_path %></li>
           <li><%= link_to "heróis de guerra", heroisdeguerra_path %></li>
           <li><%= link_to "contato", sos_path %></li>
+        <% if !logged_in? %>
           <%= link_to "login", signup_path, class: "btn btn-lg btn-primary" %>
+        <% else %>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">admin <span class="caret"></span></a>
+            <ul class="dropdown-menu">
+              <li><%= link_to "incluir usuários", '../../users/new' %></li>
+              <li><%= link_to "inicializar temas", '../../temas/new' %></li>
+              <li><%= link_to "incluir candidatos", '../../candidatos/new' %></li>
+              <li><%= link_to "trocar senha", edit_user_path(current_user) %></li>
+              <li><%= link_to "todos admin", users_path %></li>
+              <li><%= link_to "todos candidatos", candidatos_path %></li>
+              <li><%= link_to "todos os temas", temas_path %></li>
+            </ul>
+          </li>
+    		  <li><%= link_to "Log out", logout_path, method: "delete", class: "btn btn-lg btn-primary" %></li>
       <% end %>
         </ul>
       </div>
