--- a/inbattle/app/views/paginas/alistamento.html.erb
+++ b/inbattle/app/views/paginas/alistamento.html.erb
@@ -1,8 +1,28 @@
-    <div class="container">
-			<h2>Alistamento</h2>
-<%= link_to image_tag("arame.gif", alt: "InBattle cerca"),
-            'http://injunior.com/' %>
-    </div>
+    <div class="corpoalistamento">
+		<div class="container">
+		    <h1>Alistamento</h1>
+		    <div class="col-md-6 padder">
+                <H2>IN Battle:</H2>
+                <p>O IN Battle é uma competição entre empresas juniores criada para divertir e integrar as empresas juniores de todo o país! IN Battle é a oportunidade de todos os empresários juniores competirem por suas empresas e colocá-las no topo do MEJ! Entre os dias 5 a 8 de novembro de 2015 a guerra está declarada e as <s>câmeras</s> armas deverão estar preparadas! E aí soldado, vai desertar?</p>
+                <h2>Como Participar</h2>
+                <p>Para participar é bem simples: Tire uma foto de acordo com o tema do dia e poste com a hashtag <b>#inbattle</b> no instagram. Depois é só votar!</p>
+                <p>Todos os dias terão novos temas para você votar! Então vote naquele tema que você acha que pode se sair melhor e continue participando! Não perca a oportunidade de ganhar e ser o empresário mais estiloso, animado ou transante do Brasil!</p>
+                <!--LADO DA MÃO DE LÁ-->
+            </div>
+            
+            <div class="col-md-6 padder">
+                <center><%= image_tag("trofeu.png", alt: "trofeu", class:"img-responsive",width: 100, high: 100) %>
+                    <h2>Premiação*</h2></center>
+                <p><text class="num_premiacao">1º</text> Assinatura de um ano no Aval** <b>+</b> 40% de desconto*** na reformulação ou criação do seu site ou sistema!</p>
+                <p><text class="num_premiacao">2º</text> Assinatura de um ano no Aval**</p>
+                <p><small>* O concurso cultural premiará as 2 fotos mais votadas entre os dias 5 e 8 de novembro de 2015 que contenham a hashtag INBattle(<b>#inbattle</b>)</small></p>
+                <p><small>** Aval é um sistema para avaliação de treinamentos, cursos , processos seletivos ou qualquer evento que sua empresa realize. Esqueça os formulários de papel! Agora você pode personalizar todas as suas avaliações e tê-las em apenas um lugar! Mais informações entre em contato conosco <%= link_to "aqui",   sos_path %>.</small></p>
+                <p><small>*** O desconto é válido por 12 meses.</small></p>
+                <!--LADO DA MÃO DE CÁ-->
+            </div>
+            
+        </div> <!-- FIM CONTAINER-->
+		</div>
+
 	
-	<h1>Paginas#alistamento</h1>
-<p>Find me in app/views/paginas/alistamento.html.erb</p>
+
