--- a/inbattle/app/views/paginas/heroisdeguerra.html.erb
+++ b/inbattle/app/views/paginas/heroisdeguerra.html.erb
@@ -3,27 +3,37 @@
     
     <div class="col-md-6">
       <h2>Melhores Combatentes do Dia</h2>
-        <%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", class:"image-candidato"), soma1_path  %>
+        <%= image_tag(@candidatoDiaAtual1.endereco, alt: "Candidato 1", class:"image-candidato") %>
         <br>
         Candidato 1 <br>
         Denunciar
         <br>
-  		  <%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", class:"image-candidato"), soma2_path %>
+  		  <%= image_tag(@candidatoDiaAtual3.endereco, alt: "Candidato 2", class:"image-candidato") %>
   		  <br>
         Candidato 2 <br>
+        Denunciar
+        <br>
+        <%= image_tag(@candidatoDiaAtual2.endereco, alt: "Candidato 3", class:"image-candidato") %>
+  		  <br>
+        Candidato 3 <br>
         Denunciar
     </div>
     
     <div class="col-md-6">
       <h2>Heróis de Guerra</h2>
-        <%= link_to image_tag(@candidatoa.endereco, alt: "Candidato 1", class:"image-candidato"), soma1_path  %>
+        <%= image_tag(@candidatoDiaAtual1.endereco, alt: "Candidato 1", class:"image-candidato") %>
         <br>
         Candidato 1 <br>
         Denunciar
         <br>
-  		  <%= link_to image_tag(@candidatob.endereco, alt: "Candidato 2", class:"image-candidato"), soma2_path %>
+  		  <%= image_tag(@candidatoDiaAtual2.endereco, alt: "Candidato 2", class:"image-candidato") %>
   		  <br>
         Candidato 2 <br>
+        Denunciar
+        <br>
+        <%= image_tag(@candidatoDiaAtual3.endereco, alt: "Candidato 3", class:"image-candidato") %>
+  		  <br>
+        Candidato 3 <br>
         Denunciar
     </div>
     
