--- a/inbattle/app/views/contacts/_form.html.erb
+++ b/inbattle/app/views/contacts/_form.html.erb
@@ -14,25 +14,27 @@
           </ul>
         </div>
       <% end %>
-    
-      <div class="field">
-        <%= f.label :nome %><br>
-        <%= f.text_field :name %>
-      </div>
-      <div class="field">
-        <%= f.label :email %><br>
-        <%= f.text_field :email %>
-      </div>
-      <div class="field">
-        <%= f.label :assunto %><br>
-        <%= f.text_field :subject %>
-      </div>
-      <div class="field">
-        <%= f.label :mensagem %><br>
-        <%= f.text_area :message %>
-      </div>
-      <div class="actions">
-        <%= f.submit %>
+      <div class="col-lg-2 col-md-2"></div>
+      <div class="col-lg-8 col-md-8 m-form">
+        <div class="field">
+          <%= f.label :nome %><br>
+          <%= f.text_field :name %>
+        </div>
+        <div class="field">
+          <%= f.label :email %><br>
+          <%= f.text_field :email %>
+        </div>
+        <div class="field">
+          <%= f.label :assunto %><br>
+          <%= f.text_field :subject %>
+        </div>
+        <div class="field">
+          <%= f.label :mensagem %><br>
+          <%= f.text_area :message %>
+        </div>
+        <div class="actions">
+          <%= f.submit %>
+        </div>
       </div>
     <% end %>   
   </div>
