--- a/inbattle/app/assets/stylesheets/custom.css.scss
+++ b/inbattle/app/assets/stylesheets/custom.css.scss
@@ -121,9 +121,14 @@ aside {
 }
 .corpoalistamento b,h1,h2{
   color: #0066cc;
+  
+}
+.lupa{
+  padding-bottom:15px;
 }
 .corpoalistamento p{
   font-size:15px;
+  text-align:justify;
 }
 .corpoalistamento h2{
   font-size:20px;
