--- a/inbattle/app/views/paginas/alistamento.html.erb
+++ b/inbattle/app/views/paginas/alistamento.html.erb
@@ -2,7 +2,8 @@
 		<div class="container">
 		    <h1>Alistamento</h1>
 		    <div class="col-md-6 padder">
-                <H2>IN Battle:</H2>
+                <center><%= image_tag("lupa.png", alt: "lupa", class:"img-responsive lupa",width: 100, high: 100) %>
+                    <H2>IN Battle</H2></center>
                 <p>O IN Battle é uma competição entre empresas juniores criada para divertir e integrar as empresas juniores de todo o país! IN Battle é a oportunidade de todos os empresários juniores competirem por suas empresas e colocá-las no topo do MEJ! Entre os dias 5 a 8 de novembro de 2015 a guerra está declarada e as <s>câmeras</s> armas deverão estar preparadas! E aí soldado, vai desertar?</p>
                 <h2>Como Participar</h2>
                 <p>Para participar é bem simples: Tire uma foto de acordo com o tema do dia e poste com a hashtag <b>#inbattle</b> no instagram. Depois é só votar!</p>
